--- a/styles.css
+++ b/styles.css
@@ -42,13 +42,16 @@ div.game {
     
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
-div.game > * {
+div.game > p {
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid grey;
+
+    font-size: 4rem;
 }
 
 input {
